src/objects/Team__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Id2__c</fullName>
        <description>This field copies the Id of the instance and stores it as a string. We had to do this so that we can compare Id&apos;s in sosl statements w/o having to turn on the private apis.
Aug 2008 -Marcos</description>
        <formula>Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewMemberProfile__c</fullName>
        <label>NewMemberProfile</label>
        <referenceTo>TeamProfile__c</referenceTo>
        <relationshipLabel>Teams</relationshipLabel>
        <relationshipName>Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentTeam__c</fullName>
        <label>Parent Team</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>ParentTeam</relationshipLabel>
        <relationshipName>ParentTeam</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Picture__c</fullName>
        <label>Picture</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublicProfile__c</fullName>
        <label>PublicProfile</label>
        <referenceTo>TeamProfile__c</referenceTo>
        <relationshipLabel>Teams (PublicProfile)</relationshipLabel>
        <relationshipName>Teams1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TeamCreatedBy__c</fullName>
        <label>TeamCreatedBy</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TeamCreatedDate__c</fullName>
        <label>TeamCreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TeamType__c</fullName>
        <label>Team Type</label>
        <referenceTo>TeamType__c</referenceTo>
        <relationshipLabel>Teams</relationshipLabel>
        <relationshipName>Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Team</label>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>